[package]
name = "chapter_eight_summary"
version = "0.1.0"
authors = ["jeremiah <j.munson225@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mylib"
path = "src/lib.rs"

[dependencies]
rand = "0.5.5"
unicode-segmentation = "1.6.0"